--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,17 +54,18 @@
             = link_to "#{curr_league.display_name}", league_path(curr_league.name)
           .navbar-item
             - if curr_league.commissioner == current_user
-              = link_to "Edit", edit_league_path(curr_league.name)
+              = link_to "Manage League", manage_league_path(curr_league)
           .navbar-item
             = link_to "Games", league_games_path(curr_league)
           .navbar-item
             = link_to "Table", table_league_path(curr_league.name)
           .navbar-item
             .navbar-dropdown
-              = link_to "Previous Seasons", league_seasons_path(curr_league)
+              = link_to "Previous Seasons", "javascript:void(0)"
               .navbar-dropdown-content
                 - curr_league.seasons.each_with_index do |season, index|
-                  = link_to "Season #{index+1}", league_season_path(curr_league.name, season.season_id)
+                  - if season != curr_league.current_season
+                    = link_to "Season #{index+1}", league_season_path(curr_league.name, season.season_id)
         - else
           .navbar-item-right
             .navbar-item
