--- a/app/views/leagues/show.haml
+++ b/app/views/leagues/show.haml
@@ -2,9 +2,9 @@
   .row
     %h2.column
       = @league.display_name
+  - if @league.current_season
     %h3{:style => "float:right;"}
       = "Days remaining: #{(@league.current_season.end - DateTime.now).to_i/(24 * 60 * 60)}"
-  - if @league.current_season
     %br
     %h3
       = "Leader leader: #{@league.leader.name}"
@@ -21,7 +21,7 @@
             %th.t-num Score
             %th.t-num Penalties
             %th View
-            - if LeagueMember.where(:user_id => current_user.id, :league_id => @league.id).first.role == "commissioner"
+            - if current_user == @league.commissioner
               %th Edit
               %th Approved
         %tbody
@@ -44,7 +44,7 @@
                   0 - 0
               %td
                 = link_to "View", league_season_game_path(@league, game.season.season_id, game.game_id)
-              - if LeagueMember.where(:user_id => current_user.id, :league_id => @league.id).first.role == "commissioner"
+              - if current_user == @league.commissioner
                 %td
                   = link_to "Edit", edit_league_season_game_path(@league, game.season.season_id, game.game_id)
                 %td
