--- a/app/views/leagues/show.haml
+++ b/app/views/leagues/show.haml
@@ -2,12 +2,13 @@
   .row
     %h2.column
       = @league.display_name
-  - if @league.current_season
+  - if @league.current_season && @league.current_season.has_games
     %h3{:style => "float:right;"}
       = "Days remaining: #{(@league.current_season.end - DateTime.now).to_i/(24 * 60 * 60)}"
     %br
-    %h3
-      = "Leader leader: #{@league.leader.name}"
+    - if @league.leader
+      %h3
+        = "Leader leader: #{@league.leader.name}"
     %br
     %h4 Recent Games
     .table.column.column-80
