BUG-1: Fix typo

--- a/app/views/games/_gtable.haml
+++ b/app/views/games/_gtable.haml
@@ -8,7 +8,7 @@
         %th Away
         %th.t-num Score
         %th.t-num Penalties
-        - if param[:action] == "review"
+        - if params[:action] == "review"
           %th Approve
           %th Decline
         - else
