--- a/app/views/games/_gtable.haml
+++ b/app/views/games/_gtable.haml
@@ -15,6 +15,7 @@
           %th View
           - if current_user == @league.commissioner
             %th Edit
+            %th Delete
             %th Approved
     %tbody
       - @games.each do |game|
@@ -40,6 +41,8 @@
             - if current_user == @league.commissioner
               %td
                 = link_to "Edit", edit_league_season_game_path(@league, game.season.season_id, game.game_id)
+              %td
+                = link_to "Destroy", league_season_game_path(@league, game.season.season_id, game.game_id), :method => :delete
               %td
                 = game.approved.to_s.capitalize
           - if params[:action] == "review"
